--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,10 @@
 .profile__info {
   display: grid;
+  grid-template-columns: minmax(auto, 295px) auto;
   grid-template-areas: "title button"
   "description description";
-  grid-template-columns: minmax(auto, 295px) auto;
-  grid-gap: 9px 17px;
+  padding: 9px 0 0;
+  grid-gap: 7px 17px;
 }
 
 @media screen and (max-width: 740px) {
