--- a/src/styles/blocks/card/__like-button/card__like-button.css
+++ b/src/styles/blocks/card/__like-button/card__like-button.css
@@ -1,3 +1,9 @@
+.card__like-holder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
+}
 .card__like-button {
   width: 21px;
   height: 18px;
@@ -17,4 +23,8 @@
 
 .card__like-button:hover {
   opacity: 0.6;
+}
+
+.card__like-num {
+  font-size: 13px;
 }
