--- a/src/styles/blocks/profile/__image/profile__image.css
+++ b/src/styles/blocks/profile/__image/profile__image.css
@@ -1,4 +1,5 @@
 .profile__image {
+  position: relative;
   width: 120px;
   height: 120px;
   -webkit-border-radius: 50%;
@@ -19,4 +20,20 @@
   .profile__image {
     margin-right: 0;
   }
+}
+
+.profile__edit-avatar {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.8) url("../../../../assets/images/edit-icon.svg") center no-repeat;
+  background-size: 26px 26px;
+  cursor: pointer;
+}
+
+.profile__image:hover .profile__edit-avatar {
+  display: block;
 }
