--- a/src/styles/blocks/popup/__button/popup__button.css
+++ b/src/styles/blocks/popup/__button/popup__button.css
@@ -14,6 +14,10 @@
   margin-top: 48px;
 }
 
+.popup_type_remove-card .popup__button {
+  margin-top: 32px;
+}
+
 .popup__button:hover {
   background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
