--- a/src/styles/blocks/popup/__content/popup__content.css
+++ b/src/styles/blocks/popup/__content/popup__content.css
@@ -9,6 +9,14 @@
   padding: 34px 36px;
 }
 
+.popup_type_edit-avatar .popup__content {
+  min-height: 272px;
+}
+
+.popup_type_remove-card .popup__content {
+  min-height: 173px;
+}
+
 @media screen and (max-width: 568px) {
   .popup__content {
     width: 100%;
